fix nav icon spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2083,6 +2083,8 @@ input, select, textarea {
 			font-variant: normal;
 			text-rendering: auto;
 			line-height: 1em;
+			margin-top: 4px;
+			margin-bottom: 4px;
 			text-transform: none !important;
 			font-family: 'Font Awesome 5 Free';
 			font-weight: 400;
